Renamed project, cleaned up pom.xml and removed unnecessary imports